# Roud_robin

2Channel/: CMakeLists.txt  interface.py
2Channel/Round_robin/: CMakeLists.txt  Round_robin.c
2Channel_OLD/: interface.py
Demo/: Current  Voltage  interface.py
Demo/Round_robin/: Round_robin.c
Simple/Round_robin/: Round_robin.c
Simple_OLD/Round_robin/: CMakeLists.txt
V0/: interface.py
V0/Round_robin/: Round_robin.c
pyInterface/Round_robin/: Round_robin.c
pyInterface_OLD/: interface.py
